--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -1,13 +1,16 @@
 :host {
-    display: block;
+    display: grid;
+    grid-template-columns: 30vw 70vw;
     box-sizing: border-box;
-    margin-inline: 300px 0;
+    background: #272D2D;
+    // margin-inline: 400px 0;
 }
 
 .gallery {
     --gap: 30px;
 
     &-list {
+        grid-area: 1/2;
         list-style: none;
         padding: 0;
         margin: 0;
@@ -16,17 +19,22 @@
         overflow-x: auto;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
+        -ms-overflow-style: none;
+        &::-webkit-scrollbar{
+            width: 0;
+        }
     }
 
     &-item {
         width: 340px;
         height: 540px;
-        background: #000;
+        background: #B8C5D6;
         border-radius: 30px;
-        color: #fff;
+        color: #272D2D;
+        font-family: Arial, Helvetica, sans-serif;
         display: grid;
         place-items: center;
-        font-size: 20px;
+        font-size: 24px;
         font-weight: 800;
         flex-shrink: 0;
         scroll-snap-align: center;
