- directives - auto height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-gallery></app-gallery>
+<!-- <app-gallery></app-gallery> -->
+
+<!-- <app-parent></app-parent> -->
+
+<!-- <app-link-directive-test></app-link-directive-test> -->
+
+<app-auto-height-test></app-auto-height-test>
