--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
+html {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+
 body {
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, h4, p {
     margin: 0;
 }
