--- a/src/app/pages/auto-height-test/bottom-block/bottom-block.component.html
+++ b/src/app/pages/auto-height-test/bottom-block/bottom-block.component.html
@@ -1,1 +1,4 @@
-<button (click)="openSlide($event)">Push me!</button>
+<div class="button-block">
+    <button >Add item</button>
+    <button (click)="openSlide($event)">Open me!</button>
+</div>
