--- a/src/app/pages/auto-height-test/slide-block/slide-block.component.html
+++ b/src/app/pages/auto-height-test/slide-block/slide-block.component.html
@@ -1,5 +1,3 @@
 <ol>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Recusandae eum error voluptatibus maiores.</li>
-    <li>Qui cum modi exercitationem aperiam.</li>
+    <li *ngFor="let item of testList">{{item.content}}</li>
 </ol>
