- rxjs create input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <!-- <app-link-directive-test></app-link-directive-test> -->
 
-<app-auto-height-test></app-auto-height-test>
+<!-- <app-auto-height-test></app-auto-height-test> -->
+
+<app-rxjs-test></app-rxjs-test>
