--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 
 <!-- <app-auto-height-test></app-auto-height-test> -->
 
-<app-rxjs-test></app-rxjs-test>
+<!-- <app-rxjs-test></app-rxjs-test> -->
+
+<app-rxjs-test-clear></app-rxjs-test-clear>
