--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <!-- <app-gallery></app-gallery> -->
-
 <!-- <app-parent></app-parent> -->
-
 <!-- <app-link-directive-test></app-link-directive-test> -->
-
 <!-- <app-auto-height-test></app-auto-height-test> -->
-
 <!-- <app-rxjs-test></app-rxjs-test> -->
+<!-- <app-rxjs-test-clear></app-rxjs-test-clear> -->
 
-<app-rxjs-test-clear></app-rxjs-test-clear>
+<!-- new branch added -->
