--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,5 @@ body {
 h1, h2, h3, h4, p {
     margin: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
