--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,28 @@
 <!-- new branch added -->
 <!-- and some new branch test -->
 
-<app-grid-card-layout></app-grid-card-layout>
+<!-- <app-grid-card-layout></app-grid-card-layout> -->
+
+<!-- <swiper-container
+pagination="true"
+clickable="true"
+loop="true"
+(click)=setSmth()
+>
+    <swiper-slide>Slide 1</swiper-slide>
+    <swiper-slide>Slide 2</swiper-slide>
+    <swiper-slide>Slide 3</swiper-slide>
+</swiper-container> -->
+<!-- <swiper-container
+loop="true"
+class="swiper-2" controller-control=".swiper-1"
+>
+    <swiper-slide>1</swiper-slide>
+    <swiper-slide>2</swiper-slide>
+    <swiper-slide>3</swiper-slide>
+</swiper-container> -->
+
+<!-- <app-cards-gallery></app-cards-gallery> -->
+
+<!-- <app-cards-stack></app-cards-stack> -->
+<app-cat></app-cat>
