- stack-gallery slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,4 +32,5 @@ class="swiper-2" controller-control=".swiper-1"
 <!-- <app-cards-gallery></app-cards-gallery> -->
 
 <!-- <app-cards-stack></app-cards-stack> -->
-<app-cat></app-cat>
+<!-- <app-cat></app-cat> -->
+<app-stack-gallery></app-stack-gallery>
