--- a/src/app/pages/cards-stack/cards-stack.component.scss
+++ b/src/app/pages/cards-stack/cards-stack.component.scss
@@ -1,7 +1,9 @@
 :host {
+  --padding-inline: 20px;
+
   display: grid;
   align-items: center;
-  padding-inline: 20px;
+  padding-inline: var(--padding-inline);
   height: 100vh;
 }
 
@@ -9,31 +11,48 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  display: grid;
+  // display: grid;
+  display: flex;
   grid-template-areas: 'stack';
   position: relative;
-  max-width: 600px;
+  // max-width: 600px;
+  max-width: calc(100vw - (var(--padding-inline) * 2));
 }
 
 .cards-item {
+  width: 600px;
   grid-area: stack;
   display: grid;
   border-radius: 20px;
   box-shadow: 20px 0 40px 20px rgba( #000000, 0.4);
   overflow: hidden;
   transition: 1000ms ease-out;
+  margin-left: -80%;
+  // &:nth-child(even){margin-left: -400px; z-index: 2;}
+  // &:nth-child(odd){margin-left: -400px;}
+  // &:nth-child(3n){z-index: 1;}
+  // &:nth-child(3n+1){z-index: 0;}
+  // &:first-child{margin-left: 0; z-index: 3;}
 
   &:nth-child(1) {
-    transform: translateX(0%);
-    z-index: 3;
+    margin-left: 0;
+    z-index: 4;
   }
   &:nth-child(2) {
-    transform: translateX(20%);
-    z-index: 2;
+    margin-left: -400px;
+    z-index: 3;
   }
   &:nth-child(3) {
-    transform: translateX(40%);
+    margin-left: -400px;
+    z-index: 2;
+  }
+  &:nth-child(4) {
+    margin-left: -400px;
     z-index: 1;
+  }
+  &:nth-child(5) {
+    margin-left: -400px;
+    z-index: 0;
   }
 }
 
