- stack gallery (throgh margin)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,3 +34,5 @@ class="swiper-2" controller-control=".swiper-1"
 <!-- <app-cards-stack></app-cards-stack> -->
 <!-- <app-cat></app-cat> -->
 <app-stack-gallery></app-stack-gallery>
+
+<!-- <app-multiselect></app-multiselect> -->
