--- a/src/app/pages/stack-gallery/stack-gallery.component.html
+++ b/src/app/pages/stack-gallery/stack-gallery.component.html
@@ -1,18 +1,24 @@
-<ul class="slide-list">
-    <li class="slide-item" 
-        *ngFor="let item of (slides|async)?.slice(0, maxVisibleSlides); let isFirst = first; let isLast = last"
-        [ngClass]="{active: activeIndex === item.index}"
-        (click)="clickSlide(item.index)"
-        [style.width.px]="getSlideWidth()"
-        [style.height.px]="getSlideHeight()"
-        [style.margin-left.px]="getMarginLeft(isFirst)"
-        [style.z-index]="item.zIndex"
-    >
-        <ng-container >
-            <img [src]="item.srcUrl" alt="" class="slide-img">
-            <span>slideIndex: {{item.index}}</span>
-        </ng-container>
-    </li>
+<ul class="slide-list" *ngIf="(slides|async) as slidesData">
+    <ng-container >
+        <li class="slide-item" 
+            *ngFor="let item of slidesData; let isFirst = first; let isLast = last"
+            [ngClass]="{
+                active: activeIndex === item.index, 
+                margin: activeIndex === item.index,
+                invisible: !(item.index >= activeIndex && item.index < (activeIndex + maxVisibleSlides)),
+                }"
+            (click)="clickSlide(item.index)"
+            [style.width.px]="getSlideWidth()"
+            [style.height.px]="getSlideHeight()"
+            [style.margin-left.px]="getMarginLeft(isFirst)"
+            [style.z-index]="getZIndex(slidesData.length, item.index, activeIndex)"
+        >
+            <ng-container >
+                <img [src]="item.srcUrl" alt="" class="slide-img">
+                <span>index: {{item.index}}</span>
+            </ng-container>
+        </li>
+    </ng-container>
 </ul>
 <ul class="pagination-list">
     <li class="pagination-item"
