--- a/src/app/pages/stack-gallery/stack-gallery.component.scss
+++ b/src/app/pages/stack-gallery/stack-gallery.component.scss
@@ -32,18 +32,26 @@ img {
   place-items: center end;
   padding: 20px;
   box-sizing: border-box;
-  // width: var(--slide-width);
-  // height: var(--slide-height);
   border-radius: var(--padding-inline);
   box-shadow: 20px 0 50px 50px rgba( #000000, 0.4);
   position: relative;
   z-index: 1;
   overflow: hidden;
+  // transition: all 3000ms ease-out;
   &.active {
     border: 4px solid green;
   }
+  &.invisible {
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    pointer-events: none;
+  }
+  &.margin {
+    margin-left: 0 !important;
+  }
   span {
-    color: red;
+    color: white;
     font-size: 24px;
     z-index: 1;
   }
