- swipe for gallery component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,3 +29,12 @@ swiper-slide {
         place-items: center;
     }
 }
+
+
+.gallery-wrapper {
+    height: 100vh;
+    background: #05191E;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+}
