--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-gallery></app-gallery> -->
+
 <!-- <app-parent></app-parent> -->
 <!-- <app-link-directive-test></app-link-directive-test> -->
 <!-- <app-auto-height-test></app-auto-height-test> -->
@@ -33,6 +33,10 @@ class="swiper-2" controller-control=".swiper-1"
 
 <!-- <app-cards-stack></app-cards-stack> -->
 <!-- <app-cat></app-cat> -->
-<app-stack-gallery></app-stack-gallery>
+<!-- <app-stack-gallery></app-stack-gallery> -->
+
+<div class="gallery-wrapper">
+    <app-gallery></app-gallery>
+</div>
 
 <!-- <app-multiselect></app-multiselect> -->
