--- a/src/app/pages/gallery/gallery.component.scss
+++ b/src/app/pages/gallery/gallery.component.scss
@@ -1,44 +1,140 @@
 :host {
-    display: grid;
-    grid-template-columns: 30vw 70vw;
-    box-sizing: border-box;
-    background: #272D2D;
-    height: 100vh;
-    // margin-inline: 400px 0;
-    --gap: 30px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    height: 360px;
+    backdrop-filter: blur(50px);
 }
 
-.gallery {
+.container {
+    position: relative;
+    max-width: 1560px;
+    width: 100%;
+    height: 360px;
+    border-radius: 12px;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.1) 0%, #05191E 100%);
+    overflow: hidden;
     
-    &-list {
-        grid-area: 1/2;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        align-items: center;
-        gap: var(--gap);
-        overflow-x: auto;
-        scroll-snap-type: x mandatory;
-        scroll-behavior: smooth;
-        -ms-overflow-style: none;
-        &::-webkit-scrollbar{
-            width: 0;
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        inset: 0;
+        background: 
+            linear-gradient(90deg,rgba(5, 25, 30, 0) 90%, rgba(5, 25, 30, 0.4) 96%, rgba(5, 25, 30, 1) 98%)
+            ;
+        z-index: 3;
+        pointer-events: none;
+    }
+}
+
+.slider-container {
+    position: relative;
+    width: 960px;
+    height: 100%;
+}
+
+.slider-item {
+    position: absolute;
+    z-index: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    font-size: 2rem;
+    color: white;
+    transition: z-index 300ms;
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: black;
+        padding: 16px;
+        border-radius: 8px;
+    }
+
+    &.hideLeft {
+        .slider-img {
+            transform: translateX(-52%) scale(0);
+        }
+    }
+    &.prev {
+        z-index: 1;
+        .slider-img {
+            opacity: 0;
+            transform: translateX(-52%) scale(0.8);
+        }
+    }
+    &.selected {
+        z-index: 2;
+        .slider-img {
+            opacity: 1;
+            transform: translateX(0%) scale(1);
+            cursor: grab;
+        }
+    }
+    &.next {
+        z-index: 1;
+        .slider-img {
+            opacity: 0.5;
+            transform: translateX(102%) scale(1);
+        }
+    }
+    &.hideRight {
+        .slider-img {
+            transform: translateX(102%) scale(0);
+        }
+    }
+}
+
+.slider-img {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 0px 10px 40px rgba(0,0,0,0.2);
+    transition: 600ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
+    transform: scale(0);
+    opacity: 0;
+    border-radius: 12px;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 360px;
+    z-index: 3;
+
+    span {
+        width: 48px;
+        height: 48px;
+        display: grid;
+        place-items: center;
+        cursor: pointer;
+        &::after {
+            content: '';
+            display: block;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: white;
+            opacity: 0.2;
+        }
+        &:first-child {
+            margin-left: -18px;
+        }
+
+        &.selected::after {
+            opacity: 1;
+        }
+        &:hover::after {
+            opacity: 1;
         }
     }
 
-    &-item {
-        width: 340px;
-        height: 540px;
-        background: #B8C5D6;
-        border-radius: 30px;
-        color: #272D2D;
-        font-family: Arial, Helvetica, sans-serif;
-        display: grid;
-        place-items: center;
-        font-size: 24px;
-        font-weight: 800;
-        flex-shrink: 0;
-        scroll-snap-align: center;
-    }
 }
