--- a/src/app/pages/stack-gallery/stack-gallery.component.scss
+++ b/src/app/pages/stack-gallery/stack-gallery.component.scss
@@ -1,12 +1,11 @@
 :host {
   --padding-inline: 20px;
-  --slide-width:1000px;
-  --slide-height: 300px;
 
   display: grid;
   align-items: center;
   justify-content: start;
-  height: 100vh;
+  gap: var(--padding-inline);
+  padding-block: var(--padding-inline);
   padding-inline: var(--padding-inline);
 }
 
@@ -25,6 +24,7 @@ img {
   flex-direction: row;
   border-radius: var(--padding-inline);
   overflow: hidden;
+  position: relative;
 }
 
 .slide-item {
@@ -34,8 +34,7 @@ img {
   box-sizing: border-box;
   border-radius: var(--padding-inline);
   box-shadow: 20px 0 50px 50px rgba( #000000, 0.4);
-  position: relative;
-  z-index: 1;
+  position: absolute;
   overflow: hidden;
   // transition: all 3000ms ease-out;
   &.active {
@@ -44,11 +43,10 @@ img {
   &.invisible {
     opacity: 0;
     position: absolute;
-    right: 0;
     pointer-events: none;
   }
   &.margin {
-    margin-left: 0 !important;
+    left: 0 !important;
   }
   span {
     color: white;
