- stack gallery swipe and infinete scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,10 +33,11 @@ class="swiper-2" controller-control=".swiper-1"
 
 <!-- <app-cards-stack></app-cards-stack> -->
 <!-- <app-cat></app-cat> -->
-<!-- <app-stack-gallery></app-stack-gallery> -->
 
-<div class="gallery-wrapper">
+<app-stack-gallery></app-stack-gallery>
+
+<!-- <div class="gallery-wrapper">
     <app-gallery></app-gallery>
-</div>
+</div> -->
 
 <!-- <app-multiselect></app-multiselect> -->
