--- a/src/app/pages/stack-gallery/stack-gallery.component.scss
+++ b/src/app/pages/stack-gallery/stack-gallery.component.scss
@@ -36,18 +36,20 @@ img {
   box-shadow: 20px 0 50px 50px rgba( #000000, 0.4);
   position: absolute;
   overflow: hidden;
-  // transition: all 3000ms ease-out;
+  transition: all 300ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
   &.active {
     border: 4px solid green;
+    cursor: grab;
   }
   &.invisible {
     opacity: 0;
     position: absolute;
+    left: 0 !important;
     pointer-events: none;
   }
-  &.margin {
-    left: 0 !important;
-  }
+  // &.margin {
+  //   left: 0 !important;
+  // }
   span {
     color: white;
     font-size: 24px;
