--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,10 +34,10 @@ class="swiper-2" controller-control=".swiper-1"
 <!-- <app-cards-stack></app-cards-stack> -->
 <!-- <app-cat></app-cat> -->
 
-<app-stack-gallery></app-stack-gallery>
+<!-- <app-stack-gallery></app-stack-gallery> -->
 
-<!-- <div class="gallery-wrapper">
+<div class="gallery-wrapper">
     <app-gallery></app-gallery>
-</div> -->
+</div>
 
 <!-- <app-multiselect></app-multiselect> -->
