--- a/src/app/pages/gallery/gallery.component.scss
+++ b/src/app/pages/gallery/gallery.component.scss
@@ -22,7 +22,7 @@
         position: absolute;
         inset: 0;
         background: 
-            linear-gradient(90deg,rgba(5, 25, 30, 0) 90%, rgba(5, 25, 30, 0.4) 96%, rgba(5, 25, 30, 1) 98%)
+            linear-gradient(90deg,rgba(5, 25, 30, 0) 80%, rgba(5, 25, 30, 0.4) 95%, rgba(5, 25, 30, 1) 100%)
             ;
         z-index: 3;
         pointer-events: none;
@@ -96,7 +96,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    box-shadow: 0px 10px 40px rgba(0,0,0,0.2);
+    // box-shadow: 0px 10px 40px rgba(0,0,0,0.2);
     transition: 600ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
     transform: scale(0);
     opacity: 0;
