--- a/src/app/pages/stack-gallery/stack-gallery.component.html
+++ b/src/app/pages/stack-gallery/stack-gallery.component.html
@@ -8,6 +8,7 @@
             *ngFor="let item of slidesData; let isFirst = first; let isLast = last"
             [ngClass]="{
                 active: activeIndex === item.index,
+                inactive: activeIndex !== item.index
                 }"
             (click)="clickSlide(item.index)"
             [style.width.px]="getSlideWidth()"
