--- a/src/app/pages/stack-gallery/stack-gallery.component.scss
+++ b/src/app/pages/stack-gallery/stack-gallery.component.scss
@@ -41,6 +41,9 @@ img {
     border: 4px solid green;
     cursor: grab;
   }
+  &.inactive {
+    cursor: pointer;
+  }
   &.invisible {
     // opacity: 0;
     // position: absolute;
