- hammer.js linear slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- <app-parent></app-parent> -->
 <!-- <app-link-directive-test></app-link-directive-test> -->
 <!-- <app-auto-height-test></app-auto-height-test> -->
@@ -8,22 +7,16 @@
 <!-- new branch added -->
 <!-- and some new branch test -->
 
+<!-- flipping card -->
 <!-- <app-grid-card-layout></app-grid-card-layout> -->
 
-<!-- <swiper-container
-pagination="true"
-clickable="true"
-loop="true"
-(click)=setSmth()
->
+<!-- <swiper-container pagination="true" clickable="true" loop="true" (click)=setSmth()>
     <swiper-slide>Slide 1</swiper-slide>
     <swiper-slide>Slide 2</swiper-slide>
     <swiper-slide>Slide 3</swiper-slide>
 </swiper-container> -->
-<!-- <swiper-container
-loop="true"
-class="swiper-2" controller-control=".swiper-1"
->
+
+<!-- <swiper-container loop="true" class="swiper-2" controller-control=".swiper-1">
     <swiper-slide>1</swiper-slide>
     <swiper-slide>2</swiper-slide>
     <swiper-slide>3</swiper-slide>
@@ -34,10 +27,22 @@ class="swiper-2" controller-control=".swiper-1"
 <!-- <app-cards-stack></app-cards-stack> -->
 <!-- <app-cat></app-cat> -->
 
-<app-stack-gallery></app-stack-gallery>
+<!-- <app-stack-gallery></app-stack-gallery> -->
 
 <!-- <div class="gallery-wrapper">
     <app-gallery></app-gallery>
 </div> -->
 
+<!-- <owl-carousel-o [options]="customOptions">
+
+    <ng-container *ngFor="let slide of slides">
+        <ng-template carouselSlide>
+            <img [src]="slide.img">
+        </ng-template>
+    </ng-container>
+
+</owl-carousel-o> -->
+
 <!-- <app-multiselect></app-multiselect> -->
+
+<app-karo-gallery></app-karo-gallery>
