--- a/src/app/pages/karo-gallery/karo-gallery.component.scss
+++ b/src/app/pages/karo-gallery/karo-gallery.component.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100vh;
   place-items: center;
-  overflow: hidden;
 }
 
 img {
@@ -14,15 +13,23 @@ img {
   height: 100%;
 }
 
+.slider-container {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  touch-action: pan-y;
+}
+
 .slides {
   margin: 0;
   padding: 0;
   list-style: none;
 
   display: flex;
-  gap: 80px;
-
-  transform: translateX(0);
+  will-change: transform;
+  transform: rotate(0deg);
+  transform-origin: center;
   transition: transform 100ms;
 }
 
