--- a/src/app/pages/karo-gallery/karo-gallery.component.scss
+++ b/src/app/pages/karo-gallery/karo-gallery.component.scss
@@ -27,6 +27,10 @@ img {
   list-style: none;
 
   display: flex;
+  position: absolute;
+  // top: 50%;
+  // left: 50%;
+
   will-change: transform;
   transform: rotate(0deg);
   transform-origin: center;
@@ -40,6 +44,7 @@ img {
   height: 540px;
   overflow: hidden;
   border-radius: 20px;
+  transform: rotate(0deg);
 
   img {
     position: absolute;
