- karo circle gallery template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,4 +45,6 @@
 
 <!-- <app-multiselect></app-multiselect> -->
 
-<app-karo-gallery></app-karo-gallery>
+<!-- <app-karo-gallery></app-karo-gallery> -->
+
+<app-karo-circle-gallery></app-karo-circle-gallery>
