--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.scss
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.scss
@@ -56,3 +56,17 @@ img {
     object-fit: cover;
   }
 }
+
+.prev,
+.next {
+  position: fixed;
+  bottom: 50px;
+}
+
+.prev {
+  left: 50px;
+}
+
+.next {
+  right: 50px;
+}
