--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -8,4 +8,6 @@
             <p>{{item.id}}</p>
         </div>
     </div>
+    <button (click)="previousSlide()" class="prev">Previous</button>
+    <button (click)="nextSlide()" class="next">Next</button>
 </div>
