--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.scss
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.scss
@@ -34,11 +34,19 @@ img {
   transition: transform 0.5s ease, opacity 0.5s ease;
   opacity: 1;
 
+  &.active {
+    p {
+      opacity: 1;
+    }
+  }
+
   p {
     text-align: center;
     font-size: 20px;
     font-weight: 700;
     margin-top: 2em;
+    opacity: 0;
+    transition: 500ms;
   }
 }
 
