--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -1,12 +1,15 @@
-<div class="slider-container" #sliderContainer>
+<div class="slider-container" (pan)="onPan($event)">
     <div class="slides">
-        <div class="slide" *ngFor="let item of slides; let i = index" [style.width]="slideWidth+'px'"
-            [@slideVisibility]="getSlideState(i)" [style.transform]="getSlideTransform(i)"
-            [class.active]="item.isActive">
+        <div class="slide" *ngFor="let item of slides; let i = index; trackBy: trackById"
+            [style.width]="slideWidth+'px'" [@slideVisibility]="getSlideState(i)"
+            [style.transform]="getSlideTransform(i)" [class.active]="item.isActive">
             <div class="img-wrapper">
                 <img [src]="item.srcUrl" alt="slide_img">
             </div>
-            <p>{{item.id}}</p>
+            <p>
+                <span style="color:red">{{item.id}} </span>
+                <span>{{item.title}}</span>
+            </p>
         </div>
     </div>
     <button (click)="previousSlide()" class="prev">Previous</button>
