--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -3,8 +3,7 @@
     (touchend)="onDragEnd($event)" #sliderContainer>
     <div class="slides">
         <div class="slide" *ngFor="let item of slides; let i = index; trackBy: trackById"
-            [style.transform]="getSlideTransform(i,deltaIndex())" [class.active]="item.isActive"
-            (click)="toggleOpen(i)">
+            [style.transform]="getSlideTransform(i)" [class.active]="item.isActive" (click)="toggleOpen(i)">
             <div class="img-wrapper">
                 <img [src]="item.srcUrl" alt="slide_img">
             </div>
