- for some save

--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -3,7 +3,8 @@
     (touchend)="onDragEnd($event)" #sliderContainer>
     <div class="slides">
         <div class="slide" *ngFor="let item of slides; let i = index; trackBy: trackById"
-            [style.transform]="getSlideTransform(i)" (click)="toggleOpen(i)" [attr.data-unique-id]="item.uniqueId"
+            [style.transform]="getSlideTransform(i,deltaX())" (click)="toggleOpen(i)"
+            [attr.data-unique-id]="item.uniqueId"
             [ngClass]="{'active': item.uniqueId === slides[indexCenter()].uniqueId}">
             <div class="img-wrapper">
                 <img [src]="item.srcUrl" alt="slide_img">
