- active slide fix

--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -4,8 +4,7 @@
     <div class="slides">
         <div class="slide" *ngFor="let item of slides; let i = index; trackBy: trackById"
             [style.transform]="getSlideTransform(i,deltaX())" (click)="toggleOpen(i)"
-            [attr.data-unique-id]="item.uniqueId"
-            [ngClass]="{'active': item.uniqueId === slides[indexCenter()].uniqueId}">
+            [attr.data-unique-id]="item.uniqueId" [ngClass]="{'active': item.isActive}">
             <div class="img-wrapper">
                 <img [src]="item.srcUrl" alt="slide_img">
             </div>
