--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -9,10 +9,10 @@
                 <img [src]="item.srcUrl" alt="slide_img">
             </div>
             <p>
-                <span>{{item.title}} </span>
-                <span style="color:red">uniqueId: {{item.uniqueId}} </span>
-                <span style="color:green">id:{{item.id}} </span>
-                <span style="color:blueviolet">index:{{i}} </span>
+                <span>{{item.title}} </span><br>
+                <span style="color:red">uniqueId: {{item.uniqueId}} </span><br>
+                <span style="color:green">id:{{item.id}} </span><br>
+                <span style="color:blueviolet">index:{{i}} </span><br>
                 <span style="color:orange">indexCenter: {{indexCenter()}} </span>
             </p>
         </div>
