--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.scss
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.scss
@@ -22,14 +22,12 @@ img {
   position: relative;
   justify-content: center;
   overflow: hidden;
-  transition: all 300ms ease;
 }
 
 .slides {
   position: relative;
   width: var(--slide-width);
   height: var(--slide-height);
-  transition: all 300ms ease;
 
   @media screen and (max-width: 1024px) {
     width: var(--slide-width-mob);
@@ -42,7 +40,7 @@ img {
   width: var(--slide-width);
   height: var(--slide-height);
   transform-origin: bottom center;
-  transition: 300ms ease;
+  transition: transform 300ms ease;
   opacity: 1;
   user-select: none;
   top: 0;
