--- a/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
+++ b/src/app/pages/karo-circle-gallery/karo-circle-gallery.component.html
@@ -16,6 +16,12 @@
                 <span style="color:orange">indexCenter: {{indexCenter()}} </span>
             </p>
         </div>
+        <div class="info-block" *ngFor="let item of slides; let i = index; trackBy: trackById"
+            [style.z-index]="slides.length">
+            <button (click)="toggleOpen(i)">back</button>
+            <h2>{{item.title}}</h2>
+            <p>{{item.text}}</p>
+        </div>
     </div>
     <button (click)="previousSlide()" class="prev">Previous</button>
     <button (click)="nextSlide()" class="next">Next</button>
